--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -27,3 +27,39 @@ body {
   flex-direction: column;
   justify-content: center;
 }
+
+.header {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+  width: 100vw;
+  align-items: center;
+}
+
+.header>h1{
+  grid-column: 1;
+  grid-row: 1;
+  justify-self: baseline;
+  margin-left: 5vw;
+}
+
+.header>h2{
+  grid-column: 1;
+  grid-row: 2;
+  justify-self: baseline;
+  margin-left: 5vw;
+}
+
+.current-score {
+  grid-column: 2;
+  grid-row: 1;
+  justify-self: end;
+  margin-right: 5vw;
+}
+
+.high-score {
+  grid-column: 2;
+  grid-row: 2;
+  justify-self: end;
+  margin-right: 5vw;
+}
