--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,6 +29,8 @@ body {
 }
 
 .header {
+  padding-left: 5vw;
+  padding-right: 5vw;
   display: grid;
   grid-template-columns: auto auto;
   grid-template-rows: auto auto;
@@ -70,9 +72,12 @@ body {
 
 .cards {
   display: grid;
+  padding-left: 5vw;
+  padding-right: 5vw;
+  justify-content:space-around;
   grid-template-columns: auto auto auto auto auto;
   grid-template-rows: auto auto;
-  gap: 2em;
+  row-gap: 2em;
 }
 
 .cards>div {
@@ -80,7 +85,7 @@ body {
 }
 
 .cards>div>img{
-  max-width: 17vw;
+  max-width: 10vw;
 }
 
 .cards>div>p{
